# Personal-MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
.mcp/: server.json
src/personal_mcp/: __init__.py  server.py
